<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/ShooterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/ShooterNameViewPadding"
                android:text="@string/NameOfShooter1" />

            <TextView
                android:id="@+id/shooter_1_score"
                style="@style/NumberViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/NumberViewMargin"
                android:gravity="center"
                android:text="@string/NumberScoreShooter1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button2"
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="addOneForShooter1"
                    android:text="@string/PlusOnePoint" />

                <Button
                    android:id="@+id/button4"
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoForShooter1"
                    android:text="@string/PlusTwoPoint" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeForShooter1"
                    android:text="@string/PlusThreePoint" />

                <Button
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addFourForShooter1"
                    android:text="@string/PlusFourPoint" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/View1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:background="@android:color/background_dark" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/ShooterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/ShooterNameViewPadding"
                android:text="@string/NameOfShooter2" />

            <TextView
                android:id="@+id/shooter_2_score"
                style="@style/NumberViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/NumberViewMargin"
                android:gravity="center"
                android:text="@string/NumberScoreShooter2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <Button
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="addOneForShooter2"
                    android:text="@string/PlusOnePoint" />

                <Button
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="addTwoForShooter2"
                    android:text="@string/PlusTwoPoint" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeForShooter2"
                    android:text="@string/PlusThreePoint" />

                <Button
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="addFourForShooter2"
                    android:text="@string/PlusFourPoint" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:scaleType="center"
        android:src="@drawable/target4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/ResetButtonsMargin"
        android:onClick="resetScoreOfShooter1"
        android:text="@string/ResetButtonAText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/ResetButtonsMargin"
        android:onClick="resetScoreOfShooter2"
        android:text="@string/ResetButtonBText" />

</RelativeLayout>